MAGETWO-55397: [WCAG 2.0 AA] Fix Color and Contrast

--- a/app/design/frontend/Magento/luma/web/css/source/_extends.less
+++ b/app/design/frontend/Magento/luma/web/css/source/_extends.less
@@ -301,7 +301,7 @@
         @_icon-font-size: 12px,
         @_icon-font-line-height: 15px,
         @_icon-font-text-hide: true,
-        @_icon-font-color: @color-gray60,
+        @_icon-font-color: @color-gray46,
         @_icon-font-color-hover: @color-gray-darken4,
         @_icon-font-color-active: @color-gray60
         );
@@ -1524,9 +1524,17 @@
 
 & when (@media-common = true) {
     .abs-block-items-counter {
-        .lib-css(color, @primary__color__lighter);
+        .lib-css(color, @block-items__counter__color);
         .lib-font-size(12px);
         white-space: nowrap;
+
+        &:before {
+            content: '(';
+        }
+
+        &:after {
+            content: ')';
+        }
     }
 }
 
